--- a/app/src/main/res/layout/fragment_net_video.xml
+++ b/app/src/main/res/layout/fragment_net_video.xml
@@ -2,8 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <com.cjj.MaterialRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/refresh"
@@ -16,28 +14,18 @@
         app:wave_color="#90ffffff"
         app:wave_height_type="normal"
         app:wave_show="true">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+        <ListView
+            android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </com.cjj.MaterialRefreshLayout>
 
 
-
-
-
-    <ProgressBar
-        android:id="@+id/progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
-
     <TextView
-        android:id="@+id/tv_nomedia"
+        android:id="@+id/tv_no_media"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="请求失败..."
-        android:visibility="gone" />
+        android:text="没有发现视频..." />
 
 </RelativeLayout>
